code review suggestions with comments

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -7,6 +7,7 @@ description: Access minimal authentication data for managing sessions and data f
 
 The `auth()` helper returns the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. This is the same `Authentication` object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
 
+{/* Is this still true for clerkMiddleware? If so, update this link */}
 The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
 A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler.
@@ -42,7 +43,7 @@ export async function GET() {
 }
 ```
 
-## Authorization
+## Authorization with `has`
 
 Use `has` in order to check if a user is authorized to access a component.
 
@@ -56,12 +57,15 @@ export default async function Page() {
 
   if(!canManage) return null;  
 
-  return <h1v>Team Settings</h1>
+  return <h1>Team Settings</h1>
 }
 ```
 
+{/* TODO: We need more documentation on has(), either a dedicated page or added right here. What are the params for it? What does it return? And examples for each of the different types of params. */}
+
 ## Authorization with `protect`
 
+{/* Would this still be true in v5? */}
 <Callout type="warning" emoji="⚠️">
   `auth().protect()` only works for App Router and is considered experimental.
 </Callout>
@@ -76,6 +80,7 @@ export const POST = () => {
 }
 ```
 
+{/* TODO: We need more documentation on protect(), either a dedicated page or added right here. What are the params for it? What does it return? And examples for each of the different types of params. */}
 
 ## Check your current user's role
 
@@ -94,13 +99,11 @@ export default async function Page() {
 }
 ```
 
-
 ## Return type of `auth`
 
-`auth` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties.
-
-### Properties
+`auth` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties:
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
+| `redirectToSignIn` | Function | Redirects the user to the sign in page. |
