add comment for strict option about it missing a desc

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -283,6 +283,6 @@ The `clerkMiddleware()` function accepts an optional object. The following optio
 | `proxyUrl?`                        | `string`             | If using a proxy, specify the URL of the proxy.                                                                                                                                                                                                                                                                                                 |
 | `signInUrl?`                       | `string`             | An alternative sign in URL.                                                                                                                                                                                                                                                                                                                     |
 | `strict?`                       | `boolean`             |                                                                                                                                                                                                                                                                                                                     |
-
+{/* TODO: strict is missing a description */}
 
 
