Update localization changes

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -889,7 +889,9 @@ The [en-US localization object](https://github.com/clerk/javascript/blob/main/pa
       "formFieldInputPlaceholder__phoneNumber_username"
       "formFieldInputPlaceholder__emailAddress_phoneNumber_username"
       "userProfile.phoneNumberPage.infoText__secondary"
-      "userProfile.mfaPhoneCodePage.successMessage"
+      "userProfile.mfaPhoneCodePage.successMessage",
+      "userProfile.profilePage.fileDropAreaTitle"
+      "userProfile.profilePage.fileDropAreaAction"
     ]
     ```
 
