code suggestions for route protection

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -25,9 +25,9 @@ export const config = {
 };
 ```
 
-The basic Middleware will protect all routes in your application. With the recommended matcher written above, all routes are matched by Clerk's authentication Middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`. 
+The basic Middleware above will not protect any routes, meaning the entire application is public. 
 
-If you want to protect only certain routes, you can pass a matcher to `clerkMiddleware()`. The matcher is an array of paths that you want to protect. 
+With the recommended matcher written above, all routes are matched by Clerk's authentication Middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`. 
 
 {/* Throw this in a callout because it is referencing a previous version/feature, so it is supplemental information. */}
 <Callout type="warning">
@@ -128,7 +128,7 @@ The following example would protect your entire application and redirect the use
 
 ```tsx filename="middleware.tsx"
 if (!auth().userId) { 
-  return auth().redirectToSignIn()
+  auth().redirectToSignIn()
 }
 ```
 
@@ -139,6 +139,8 @@ if (!auth().userId) {
 The `protect()` method from `auth()` allows you to protect a route based on whether they are authenticated or not. 
 
 The following example would require the user to be signed in. If they are not authenticated, `protect()` will redirect the user to sign in.
+
+{/* TODO: i don't think this code example is complete ? i don't think this is what you would copy and paste into middleware.tsx */}
 
 ```tsx filename="middleware.tsx"
 if (protectedRoute(req)) { 
