--- a/docs/references/nextjs/route-protection.mdx
+++ b/docs/references/nextjs/route-protection.mdx
@@ -1,33 +1,32 @@
 ---
-title: Route protection | Next.js
+title: Route Protection | Next.js
 description: Learn how to protect the routes in your application 
 ---
 
-# Route protection
+# Route Protection
 
-Clerk offers you, the developer, any options to secure the routes in their applications, as well as easy ways to integrate role or permissions based checks. The opt-in nature of Clerk gives you flexibility in how you want to build you application.
+Clerk offers you, the developer, many options to protect the routes in your application, as well as easy ways to integrate role or permissions-based checks. The opt-in nature of Clerk gives you flexibility in how you build your application.
 
+## Clerk's Core Concepts for Route Protection
 
-## Core concepts
+### Opt-In Protection For Routes
 
-### Opt-In 
+`clerkMiddleware()` provides opt-in protection for your routes. By default, no routes will be protected. You will indicate what routes to protect through the Middleware, layouts, or even per route/page. 
 
-`clerkMiddleware()` provides opt-in protection for your routes. By default no routes will be protected. You will indicate what routes to protect through the Middleware, layouts or even per route/page. 
-
-### Intregration with Organizations and Roles
+### Integration with Organizations and Roles
 
 `clerkMiddleware()` provites a new `auth().protect()` method that can be used when creating rules to protect pages. This will integrate with Organization role and permissions, allowing you to protect routes based on the permissions or roles a user has.
 
-### Protect via Middleware, routes, pages, or a mixture of all three
+### Protect Routes via Middleware, Layout, Pages, or a Mixture of All Three
 
-With the opt-in approach of `clerkMiddleware()` you are free to protect your routes and pages in the most conveniant way to you.
+With the opt-in approach of `clerkMiddleware()`, you are free to protect your routes and pages in the most convenient way to you.
 
-
-## Middleware only
+## Protect routes with Middleware only
 
 Does your application have limited or straight forward route protection needs? Configuring your protection in Middleware and only Middleware could be the play. Perhap your application is only available to signed in users, or most of your app is under the `/dashboard` route and only available for signed in users. In this case protecting from Middleware is a central location that enables this protection.
 
-The following will require users to be logged in to access the `/dashboard` route, and if they are not it will redirect to sign the sign-in route.
+The following example would require users visiting the `/dashboard` route to be signed in, in order to access the route. If they are not authenticated, [`auth().protect()`](/docs/references/nextjs/auth#authorization-with-protect) would redirect them to the sign-in route.
+{/* TODO: update link for protect()... we are currently figuring out if we need to create a dedicated page for it or simply add more information to its section on the auth() docs page. */}
 
 ```tsx filename="app/src/middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
@@ -45,11 +44,13 @@ export const config = {
 };
 ```
 
-## Middleware + layout or page
+## Protect routes with Middleware and Layout or Page
 
-Applications with more complex protection needs may be well suited to use a mix of Middleware and layout or page based protection. Your application may have a `/dashboard` section, but within that it might have routes or specific pages that are limited to users with a specific role or permission. In a situation such as this you might enforce that only signed in users can access `/dashboard` in your Middleware, and then add specific role based checks the `layout.tsx` for a route like `/dashboard/manage-users`.
+Applications with more complex protection needs may be well suited to use a mix of Middleware and Layout or Page-based protection. Your application may have a `/dashboard` section, but within that, it might have routes or specific pages that are limited to users with a specific role or permission. In a situation such as this, you might enforce that only signed in users can access `/dashboard` in your Middleware, and then add specific role-based checks to the `layout.tsx` for a route like `/dashboard/manage-users`.
 
-### Middleware + layout example
+### Protect routes with Middleware and Layout example
+
+The following example uses `clerkMiddleware()` to protect all `/dashboard` routes. If a user is not authenticated, [`auth().protect()`](/docs/references/nextjs/auth#authorization-with-protect) would redirect them to the sign-in route.
 
 ```tsx filename="app/src/middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
@@ -66,6 +67,8 @@ export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
+
+Paired with the example above, which checks if a user visiting any `/dashboard` route is authenticated, the following example would require users visiting the `/dashboard/manage-users` route to be authenticated *and* to have the `org:admin` role. If they are not authenticated or do not have the `org:admin` role, [`auth().protect()`](/docs/references/nextjs/auth#authorization-with-protect) would redirect them to the sign-in route.
 
 ```tsx filename="app/src/dashboard/manage-users/layout.tsx" 
 import { auth } from '@clerk/nextjs/server'
@@ -79,7 +82,9 @@ export default async function HookLayout({ children }: { children: React.ReactNo
 }
 ```
 
-### Middleware + page example
+### Protect routes with Middleware and Page example
+
+The following example uses `clerkMiddleware()` to protect all `/dashboard` routes. If a user is not authenticated, [`auth().protect()`](/docs/references/nextjs/auth#authorization-with-protect) would redirect them to the sign-in route.
 
 ```tsx filename="app/src/middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
@@ -96,6 +101,8 @@ export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
+
+Paired with the example above, which checks if a user visiting any `/dashboard` route is authenticated, the following example would require users visiting the `/dashboard/manage-users` route to be authenticated *and* to have the `org:admin` role. [`auth().has()`](/docs/references/nextjs/auth#authorization-with-protect) would detect whether or not the user has the `org:admin` role.
 
 ```tsx filename="app/src/dashboard/manage-users/page.tsx" 
 import { auth } from '@clerk/nextjs/server'
@@ -115,12 +122,13 @@ if (!auth().has({ role: "org:admin" })) {
 }
 ```
 
-## Layout or page only
+## Protect routes with Layout or Page only (no Middleware)
 
-Clerk's `clerkMiddleware()` is purely opt-in, meaning if ou don't add any specific protection to the Middleware all routes are public. This allows you to then enforce protections via only layouts or even pages and keep your protection logic scoped to that specific area it govens in your application.
+Clerk's `clerkMiddleware()` is purely opt-in, meaning if you don't add any specific protection to the Middleware, all routes are public. This allows you to then enforce protections via *only* layouts, or even pages, and keep your protection logic scoped to that specific area that it governs in your application.
 
+The following examples show how to protect the `/dashboard/manage-users` route with only a Layout *or* only a Page.
 
-### Layout example
+### Protect routes with Layout example
 
 ```tsx filename="app/src/dashboard/manage-users/layout.tsx" 
 import { auth } from '@clerk/nextjs/server'
@@ -134,7 +142,7 @@ export default async function HookLayout({ children }: { children: React.ReactNo
 }
 ```
 
-### Page example
+### Protect routes with Page example
 
 ```tsx filename="app/src/dashboard/manage-users/page.tsx" 
 import { auth } from '@clerk/nextjs/server'
@@ -153,4 +161,3 @@ if (!auth().has({ role: "org:admin" })) {
   );
 }
 ```
-
