update return format for examples; update deleteAllowlistIdentifier and getAllowlistIdentifier for v5

--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -18,22 +18,25 @@ function createAllowlistIdentifier: (params: AllowlistIdentifierCreateParams) =>
 | `identifier` | `string` | The `identifier` can be: a phone number in international [E.164](https://en.wikipedia.org/wiki/E.164) format, an email address, or a wildcard email address (*.domain.com). Use this identifier value to allow any email address in a particular email domain. |
 | `notify` | `boolean` | Whether to notify the owner of the identifier. The `notify` property is not available for wildcard identifiers. |
 
-## `createAllowlistIdentifier()` example
+## `createAllowlistIdentifier()` Example
 
 ```tsx
-const { data } = await clerkClient.allowlistIdentifiers.createAllowlistIdentifier({
+const response = await clerkClient.allowlistIdentifiers.createAllowlistIdentifier({
   identifier: 'test@example.com',
   notify: false,
 });
 
-console.log(data);
-/*
- {
+console.log(response);
+/* response:
+{
+  data: _AllowlistIdentifier {
     id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
     identifier: 'test@example.com',
     createdAt: 1705443883820,
     updatedAt: 1705443883820,
     invitationId: undefined
-  };
+  },
+  errors: null
+}
 */
 ```
