--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -1,20 +1,39 @@
 ---
 title: deleteAllowlistIdentifier()
-description: Deletes an allowlist identifier, given a valid ID. Throws an error if the ID is invalid.
+description: Deletes an allowlist identifier, given a valid ID.
 ---
 
 # `deleteAllowlistIdentifier()`
 
-Deletes an allowlist identifier, given a valid ID. Throws an error if the ID is invalid.
+Deletes an allowlist identifier, given a valid ID.
 
 ```tsx
-const allowlistIdentifierId = 'alid_randomid';
-
-await clerkClient.allowlistIdentifiers.deleteAllowlistIdentifier(allowlistIdentifierId);
+function deleteAllowlistIdentifier: (allowlistIdentifierId: string) => Promise<ClerkBackendApiResponse<AllowlistIdentifier>>;
 ```
 
-## Required parameters
+## `deleteAllowlistIdentifier()` params
 
 | Name | Type | Description |
 | ---- | --- | --- |
 | `allowlistIdentifierId` | `string` | The ID of the allowlist identifier to delete. |
+
+## `deleteAllowlistIdentifier()` example
+
+```tsx
+const allowlistIdentifierId = 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J';
+
+const response = await clerkClient.allowlistIdentifiers.deleteAllowlistIdentifier(allowlistIdentifierId);
+
+console.log(response);
+/* 
+{
+  data: _DeletedObject {
+    object: 'allowlist_identifier',
+    id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+    slug: null,
+    deleted: true
+  },
+  errors: null
+}
+*/
+```
