--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -8,5 +8,28 @@ description: Retrieves the list of allowlist identifiers.
 Retrieves the list of allowlist identifiers.
 
 ```tsx
-const allowlistIdentifiers = await clerkClient.allowlist.getAllowlistIdentifierList();
+function getAllowlistIdentifier: () => Promise<ClerkBackendApiResponse<AllowlistIdentifier[]>>;
+```
+
+## `getAllowlistIdentifierList()` Example
+
+```tsx
+const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
+
+console.log(response);
+/* response:
+{
+  data: [
+    _AllowlistIdentifier {
+      id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+      identifier: 'test@example.com',
+      createdAt: 1705443883820,
+      updatedAt: 1705443883820,
+      invitationId: undefined
+    }
+  ],
+  totalCount: 1,
+  errors: null
+}
+*/
 ```
