use title-casing for headings; update getClient and verifyClient

--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -8,13 +8,19 @@ description: Retrieves a client for a given session token, if the session is act
 Retrieves a client for a given session token, if the session is active.
 
 ```tsx
-const sessionToken = 'my-session-token';
-
-const client = await clerkClient.clients.verifyClient(sessionToken);
+function verifyClient: (token: string) => Promise<ClerkBackendApiResponse<Client>>;
 ```
 
-## Required parameters
+## `verifyClient()` Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `sessionToken` | `string` | The session token to verify. |
+
+## `verifyClient()` Example
+
+```tsx
+const token = 'my-session-token';
+
+const { data, errors } = await clerkClient.clients.verifyClient(token);
+```
