--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -11,13 +11,13 @@ Deletes an allowlist identifier, given a valid ID.
 function deleteAllowlistIdentifier: (allowlistIdentifierId: string) => Promise<ClerkBackendApiResponse<AllowlistIdentifier>>;
 ```
 
-## `deleteAllowlistIdentifier()` params
+## `deleteAllowlistIdentifier()` Params
 
 | Name | Type | Description |
 | ---- | --- | --- |
 | `allowlistIdentifierId` | `string` | The ID of the allowlist identifier to delete. |
 
-## `deleteAllowlistIdentifier()` example
+## `deleteAllowlistIdentifier()` Example
 
 ```tsx
 const allowlistIdentifierId = 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J';
