--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -1,20 +1,26 @@
 ---
 title: getClient()
-description: Retrieves a single client by its ID, if the ID is valid. Throws an error otherwise.
+description: Retrieves a single client by its ID, if the ID is valid.
 ---
 
 # `getClient()`
 
-Retrieves a single client by its ID, if the ID is valid. Throws an error otherwise.
+Retrieves a single client by its ID, if the ID is valid.
 
 ```tsx
-const clientId = 'my-client-id';
-
-const client = await clerkClient.clients.getClient(clientId);
+function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client>>;
 ```
 
-## Required parameters
+## `getClient()` Params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `clientId` | `string` | The ID of the client to retrieve. |
+
+## `getClient()` Example
+
+```tsx
+const clientId = 'my-client-id';
+
+const { data, errors } = await clerkClient.clients.getClient(clientId);
+```
