--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -178,7 +178,8 @@ export default function Home() {
 ``` 
 </CodeBlockTabs>
 
-Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000) to see what signed out users will see. Next you will add a button so you can sign in.
+Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000) to see what signed out users will see. Next you will add a button so you can sign in and see the content within the `<SignedIn />` component.
+
 
 ### Embed the `<UserButton />` and `<SignInButton />`
 
