--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -124,7 +124,8 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
 
 Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default.
 
-Create a middleware.ts file. If your application uses the src/ directory, your middleware.ts file should be placed inside the src/ folder. If you are not using a src/ directory, place the middleware.ts file in your root directory alongside .env.local.
+To get started, create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
+
 
 Copy and paste the following code into your middleware.ts. 
 
