--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -127,7 +127,8 @@ Middleware grants you access to user authentication state throughout your applic
 To get started, create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
 
 
-Copy and paste the following code into your middleware.ts. 
+Then, copy and paste the following code into your `middleware.ts`. 
+
 
 ```tsx filename="middleware.ts"
 import { clerkMiddleware } from "@clerk/nextjs/server";
